# rag

./: .env.example  Dockerfile  README.md  ask.py  docker-compose.yml  ingest.py  mcp_server.py  pyproject.toml  worker.py
ingestion/: config.py  pipeline.py  queue.py  tasks.py
query/: engine.py
