[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.74.0",
    "docling-core[chunking]>=2.65.1",
    "llama-index-core>=0.14.15",
    "llama-index-embeddings-huggingface>=0.4.0",
    "llama-index-postprocessor-flag-embedding-reranker>=0.2.0",
    "llama-index-llms-openai>=0.6.19",
    "llama-index-node-parser-docling>=0.4.2",
    "llama-index-readers-docling>=0.4.2",
    "llama-index-vector-stores-postgres>=0.7.3",
    "llama-index-retrievers-bm25>=0.5.0",
    "llama-index-storage-docstore-redis>=0.3.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.46",
    "flagembedding>=1.3.5",
]
